Working on shim connection

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:active": "mocha -r ts-node/register test/integration/*.active.test.ts --recursive --exit",
     "test:unit": "mocha -r ts-node/register test/unit/*.test.ts --recursive --exit",
     "test:active:unit": "mocha -r ts-node/register test/unit/*.active.test.ts --recursive --exit",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "t": "ts-node src/test.ts"
   },
   "repository": {
     "type": "git",
