--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "dev": "nodemon src/main.ts",
     "build:ts": "tsc -p .",
     "typedoc": "typedoc",
+    "bundle": "node tools.js --bundle",
+    "link": "node tools.js --link",
+    "link:sudo": "node tools.js --link --sudo",
+    "unlink": "node tools.js --unlink",
+    "unlink:sudo": "node tools.js --unlink --sudo",
+    "pack:dist": "node tools.js --pack",
     "test": "mocha -r ts-node/register test/integration/*.test.ts --recursive --exit",
     "test:active": "mocha -r ts-node/register test/integration/*.active.test.ts --recursive --exit",
     "test:unit": "mocha -r ts-node/register test/unit/*.test.ts --recursive --exit",
