--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test:active": "mocha -r ts-node/register test/integration/*.active.test.ts --recursive --exit",
     "test:unit": "mocha -r ts-node/register test/unit/*.test.ts --recursive --exit",
     "test:active:unit": "mocha -r ts-node/register test/unit/*.active.test.ts --recursive --exit",
-    "lint": "eslint . --ext .ts",
-    "t": "ts-node src/test.ts"
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -34,26 +33,25 @@
     "url": "https://github.com/becomesco/cms-shim/issues"
   },
   "dependencies": {
-    "@becomes/purple-cheetah": "^2.0.32",
-    "express": "^4.17.1",
-    "mongoose": "^5.12.10"
+    "@becomes/purple-cheetah": "^3.1.1",
+    "@becomes/purple-cheetah-mod-jwt": "^1.1.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.18",
     "@types/express": "^4.17.9",
-    "@types/mocha": "^8.2.1",
-    "@types/node": "^12.20.13",
+    "@types/node": "^15.6.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
-    "chai": "^4.3.0",
     "env-cmd": "^10.1.0",
-    "eslint": "^7.26.0",
-    "mocha": "^8.4.0",
+    "eslint": "^7.24.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.0",
-    "ts-node": "^8.10.2",
-    "typedoc-neo-theme": "^1.1.1",
-    "typescript": "^4.2.2"
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.10.1",
+    "tscpaths": "0.0.9",
+    "typedoc": "^0.17.8",
+    "typedoc-neo-theme": "^1.0.10",
+    "typescript": "^4.3.5"
   },
   "nodemonConfig": {
     "watch": [
