--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
   },
   "dependencies": {
     "@becomes/purple-cheetah": "^3.1.3",
+    "@becomes/purple-cheetah-mod-fsdb": "^1.1.1",
     "@becomes/purple-cheetah-mod-jwt": "^1.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^15.6.2",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "env-cmd": "^10.1.0",
