--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -44,8 +44,18 @@ http {
 
       proxy_pass http://172.17.0.1:1280/api/socket/server;
     }
+    location /api {
+      proxy_pass http://172.17.0.1:1280/api;
+    }
+    location /sockjs-node {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+
+      proxy_pass http://172.17.0.1:1281/sockjs-node;
+    }
     location / {
-      proxy_pass http://172.17.0.1:1280/;
+      proxy_pass http://172.17.0.1:1281/;
     }
   }
 
