--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
-# BCMS_LOCAL=true
-BCMS_CLOUD_DOMAIN=172.17.0.1
-BCMS_CLOUD_PORT=8081
+BCMS_LOCAL=true
+# BCMS_CLOUD_DOMAIN=172.17.0.1
+# BCMS_CLOUD_PORT=8081
