--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -48,13 +48,14 @@ http {
     location /api {
       proxy_pass http://172.17.0.1:1280/api;
     }
-    # location /sockjs-node {
-    #   proxy_http_version 1.1;
-    #   proxy_set_header Upgrade $http_upgrade;
-    #   proxy_set_header Connection "upgrade";
+    location /sockjs-node {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
 
-    #   proxy_pass http://172.17.0.1:1281/sockjs-node;
-    # }
+      proxy_pass http://172.17.0.1:1280/sockjs-node;
+    }
     location / {
       proxy_pass http://172.17.0.1:1280/;
     }
