--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@becomes/purple-cheetah": "^3.1.5",
     "@becomes/purple-cheetah-mod-fsdb": "^1.1.1",
     "@becomes/purple-cheetah-mod-jwt": "^1.1.0",
+    "chokidar": "^3.5.2",
     "express": "^4.17.1",
     "uuid": "^8.3.2"
   },
@@ -51,7 +52,6 @@
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.10.1",
-    "tscpaths": "0.0.9",
     "typedoc": "^0.17.8",
     "typedoc-neo-theme": "^1.0.10",
     "typescript": "^4.3.5"
