--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:active": "mocha -r ts-node/register test/integration/*.active.test.ts --recursive --exit",
     "test:unit": "mocha -r ts-node/register test/unit/*.test.ts --recursive --exit",
     "test:active:unit": "mocha -r ts-node/register test/unit/*.active.test.ts --recursive --exit",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "tmp": "nodemon src/tmp.ts"
   },
   "repository": {
     "type": "git",
