--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -18,4 +18,4 @@ RUN curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-20
   && rm -r docker docker-20.10.8.tgz
 RUN npm i
 
-ENTRYPOINT ["npm", "start"]
+ENTRYPOINT ["npm", "run", "dev"]
