--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@becomes/purple-cheetah-mod-jwt": "^1.1.0",
     "chokidar": "^3.5.2",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
