--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,14 @@ services:
       context: '.'
       dockerfile: 'Dockerfile.dev'
     ports:
-      - '1282:1282'
+      - '1279:1279'
     volumes:
       - type: bind
         source: ./src
         target: /app/src
+      - type: bind
+        source: ./proxy
+        target: /app/proxy
       - type: bind
         source: ./.env.dev
         target: /app/.env.dev
