--- a/proxy/_nginx.conf
+++ b/proxy/_nginx.conf
@@ -27,6 +27,27 @@ http {
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*;
 
+  server {
+    listen 80;
+    listen [::]:80;
+    server_name _;
+
+    client_max_body_size 105M;
+
+    location /_instance-proxy/api/socket/server {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
+
+      proxy_pass http://172.17.0.1:1279/_instance-proxyapi/socket/server/;
+    }
+    location /_instance-proxy {
+      proxy_set_header bcmsrip $remote_addr ;
+      proxy_pass http://172.17.0.1:1279/_instance-proxy;
+    }
+  }
+
   # ---- INSTNCES START ----
   ########
   # BCMS #
@@ -77,7 +98,7 @@ http {
 
     location / {
       proxy_set_header bcmsrip $remote_addr ;
-      proxy_pass http://172.17.0.1:1282/;
+      proxy_pass http://172.17.0.1:1279/;
     }
   }
 }
