--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,3 +1,4 @@
+
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
@@ -27,10 +28,6 @@ http {
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*;
 
-  # ---- INSTNCES START ----
-  ########
-  # BCMS #
-  ########
   server {
     listen 80;
     listen [::]:80;
@@ -38,32 +35,21 @@ http {
 
     client_max_body_size 105M;
 
-    location /api/socket/server {
+    location /_instance-proxy/api/socket/server {
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
       proxy_set_header Host $host;
 
-      proxy_pass http://172.17.0.1:1280/api/socket/server/;
+      proxy_pass http://172.17.0.1:1279/_instance-proxyapi/socket/server/;
     }
-    location /api {
+    location /_instance-proxy {
       proxy_set_header bcmsrip $remote_addr ;
-      proxy_pass http://172.17.0.1:1280/api;
-    }
-    location /sockjs-node {
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_set_header Host $host;
-
-      proxy_pass http://172.17.0.1:1280/sockjs-node;
-    }
-    location / {
-      proxy_set_header bcmsrip $remote_addr ;
-      proxy_pass http://172.17.0.1:1280/;
+      proxy_pass http://172.17.0.1:1279/_instance-proxy;
     }
   }
-  # ---- INSTNCES END ----
+
+  
 
   ########
   # Shim #
@@ -77,7 +63,7 @@ http {
 
     location / {
       proxy_set_header bcmsrip $remote_addr ;
-      proxy_pass http://172.17.0.1:1282/;
+      proxy_pass http://172.17.0.1:1279/;
     }
   }
 }
