--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "unlink:sudo": "node tools.js --unlink --sudo",
     "pack:dist": "node tools.js --pack",
     "create:image": "node tools.js --create-image",
+    "create:dev:image": "node tools.js --create-dev-image",
     "test": "mocha -r ts-node/register test/integration/*.test.ts --recursive --exit",
     "test:active": "mocha -r ts-node/register test/integration/*.active.test.ts --recursive --exit",
     "test:unit": "mocha -r ts-node/register test/unit/*.test.ts --recursive --exit",
