--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-BCMS_LOCAL=true
-# BCMS_MANAGE=true
-# BCMS_CLOUD_DOMAIN=172.17.0.1
-# BCMS_CLOUD_PORT=8081
+# BCMS_LOCAL=true
+BCMS_MANAGE=true
+BCMS_CLOUD_DOMAIN=10.20.30.1
+BCMS_CLOUD_PORT=8081
