--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '3.9'
+networks:
+  default:
+    external: true
+    name: bcms
 services:
   shim:
+    hostname: 'bcms-shim'
     build:
       context: '.'
       dockerfile: 'Dockerfile.dev'
