--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "url": "https://github.com/becomesco/cms-shim/issues"
   },
   "dependencies": {
-    "@becomes/purple-cheetah": "^3.1.6",
+    "@banez/child_process": "^1.0.1",
+    "@banez/docker": "^1.0.1",
+    "@becomes/purple-cheetah": "^3.3.2",
     "@becomes/purple-cheetah-mod-jwt": "^1.1.0",
     "chokidar": "^3.5.2",
     "express": "^4.17.1",
