--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "dev": "env-cmd -f .env.dev nodemon src/main.ts",
     "build:ts": "tsc -p .",
     "typedoc": "typedoc",
-    "bundle": "node tools.js --bundle",
-    "link": "node tools.js --link",
-    "link:sudo": "node tools.js --link --sudo",
-    "unlink": "node tools.js --unlink",
-    "unlink:sudo": "node tools.js --unlink --sudo",
-    "pack:dist": "node tools.js --pack",
-    "create:image": "node tools.js --create-image",
-    "create:dev:image": "node tools.js --create-dev-image",
+    "bundle": "npm-tool --bundle",
+    "link": "npm-tool --link",
+    "link:sudo": "npm-tool --link --sudo",
+    "unlink": "npm-tool --unlink",
+    "unlink:sudo": "npm-tool --unlink --sudo",
+    "pack:dist": "npm-tool --pack",
+    "create:image": "npm-tool --create-image",
+    "create:dev:image": "npm-tool --create-dev-image",
     "test": "mocha -r ts-node/register test/integration/*.test.ts --recursive --exit",
     "test:active": "mocha -r ts-node/register test/integration/*.active.test.ts --recursive --exit",
     "test:unit": "mocha -r ts-node/register test/unit/*.test.ts --recursive --exit",
@@ -35,7 +35,7 @@
     "url": "https://github.com/becomesco/cms-shim/issues"
   },
   "dependencies": {
-    "@banez/child_process": "^1.0.2",
+    "@banez/child_process": "^1.0.3",
     "@banez/docker": "^1.1.0",
     "@becomes/purple-cheetah": "^3.5.0",
     "@becomes/purple-cheetah-mod-jwt": "^1.1.0",
@@ -45,6 +45,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@banez/fs": "^1.0.1",
+    "@banez/npm-tool": "^1.0.1",
     "@types/express": "^4.17.9",
     "@types/node": "^15.6.2",
     "@types/uuid": "^8.3.1",
