Working on integration

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 # BCMS_LOCAL=true
 BCMS_SHIM_CONTAINER_NAME=shim_shim_1
 BCMS_MANAGE=true
-BCMS_CLOUD_DOMAIN=bcms-cloud.eu.ngrok.io
+BCMS_CLOUD_DOMAIN=cloud.thebcms.com
 BCMS_CLOUD_PORT=443
