--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
-# BCMS_LOCAL=true
-BCMS_SHIM_CONTAINER_NAME=shim_shim_1
-BCMS_MANAGE=false
-BCMS_CLOUD_DOMAIN=10.20.30.1
-BCMS_CLOUD_PORT=8081
+BCMS_LOCAL=true
+# BCMS_SHIM_CONTAINER_NAME=shim_shim_1
+# BCMS_MANAGE=false
+# BCMS_CLOUD_DOMAIN=10.20.30.1
+# BCMS_CLOUD_PORT=8081
