--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,12 @@
 /licenses
 /.idea
 /storage
-/proxy/ssl
+/proxy/ssl/**/key
+/proxy/ssl/**/crt
 /proxy/nginx.conf
 /lib
 /tsconfig.tsbuildinfo
+/proxy/nginx.conf
 
 # Logs
 logs
