--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,10 @@
+/db
 /dist
-/license
 /logs
 /node_modules
-/storage
+/uploads
+
+/.env
+/docker-compose.yml
+/docker-compose-standalone.yml
+/Dockerfile
