--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "@becomes/cms-shim",
-  "version": "1.0.0",
+  "name": "@becomesco/shim",
+  "version": "2.0.0",
   "description": "",
   "main": "./main.js",
-  "types": "./main.d.ts",
+  "types": "./index.d.ts",
   "scripts": {
     "start": "node main.js",
-    "start:local": "env-cmd -f .env.dev node main.js",
-    "dev": "env-cmd -f .env.dev nodemon src/main.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/main.ts",
+    "build": "npm-tool --build",
+    "tools": "npm-tool",
+    "prepare": "husky install",
+    "precommit": "npm-tool --precommit",
+    "start:local": "node main.js",
     "build:ts": "tsc -p .",
     "typedoc": "typedoc",
     "bundle": "npm-tool --bundle",
@@ -26,39 +30,36 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/becomesco/cms-shim.git"
+    "url": "git+https://github.com/becomesco/cms-cloud-backend.git"
   },
   "keywords": [],
   "author": "Becomes",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/becomesco/cms-shim/issues"
+    "url": "https://github.com/becomesco/cms-cloud-backend/issues"
   },
   "dependencies": {
-    "@banez/child_process": "^1.0.3",
-    "@banez/docker": "^1.1.0",
-    "@becomes/purple-cheetah": "^3.5.0",
+    "@banez/fs": "^1.0.3",
+    "@banez/queue": "^1.0.0",
+    "@becomes/purple-cheetah": "^3.6.1",
     "@becomes/purple-cheetah-mod-jwt": "^1.1.0",
     "@becomes/purple-cheetah-mod-socket": "^1.1.0",
-    "chokidar": "^3.5.2",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.1",
-    "uuid": "^8.3.2"
+    "@banez/child_process": "^1.0.3"
   },
   "devDependencies": {
-    "@banez/fs": "^1.0.1",
-    "@banez/npm-tool": "^1.0.1",
-    "@types/express": "^4.17.9",
-    "@types/node": "^15.6.2",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
-    "env-cmd": "^10.1.0",
-    "eslint": "^7.24.0",
-    "nodemon": "^2.0.12",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3.5"
+    "@banez/npm-tool": "^1.1.1",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "eslint": "^8.32.0",
+    "husky": "^8.0.3",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.8.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.4"
   },
   "nodemonConfig": {
     "watch": [
