--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       dockerfile: 'Dockerfile.dev'
     ports:
       - '1279:1279'
+    env_file:
+      - .env
     volumes:
       - type: bind
         source: ./src
@@ -18,9 +20,6 @@ services:
       - type: bind
         source: ./proxy
         target: /app/proxy
-      - type: bind
-        source: ./.env.dev
-        target: /app/.env.dev
       - type: bind
         source: ./licenses
         target: /app/licenses
