--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@becomes/purple-cheetah": "^3.7.4",
     "@becomes/purple-cheetah-mod-jwt": "^1.1.0",
     "@becomes/purple-cheetah-mod-socket": "^1.1.0",
+    "axios": "^0.27.2",
     "chokidar": "^3.5.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
